[tool.poetry]
name = "crawler"
version = "2.0.0"
description = ""
authors = ["Elliot Voris <elliot@stellar.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.1.1"
requests = "^2.32.4"
toml = "^0.10.2"
pygithub = "^2.7.0"
tomlkit = "^0.13.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
mypy = "^1.17.1"
pylint = "^3.3.7"
pdoc = "^15.0.4"
isort = "^6.0.1"
types-requests = "^2.32.4.20250611"
types-toml = "^0.10.8.20240310"

[tool.pylint.format]
max-line-length = "88"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
crawl = "crawler.crawler:crawl"
count_repos = "crawler.crawler:count_repos"
count_contrib = "crawler.crawler:count_contributors"
main = "crawler.crawler:main"
