[project]
name = "crawler"
version = "2.0.0"
description = ""
authors = [{ name = "Elliot Voris", email = "elliot@stellar.org" }]
requires-python = ">=3.12,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pygithub>=2.9.1,<3.0.0",
    "python-dotenv>=1.2.2,<2.0.0",
    "requests>=2.34.2,<3.0.0",
]

[project.scripts]
crawl = "crawler.crawler:crawl"
count_repos = "crawler.crawler:count_repos"
count_contrib = "crawler.crawler:count_contributors"
main = "crawler.crawler:main"

[dependency-groups]
dev = [
    "black>=26.5.1,<27.0.0",
    "isort>=8.0.1,<9.0.0",
    "mypy>=2.1.0,<3.0.0",
    "pdoc>=16.0.0,<17.0.0",
    "pylint>=4.0.5,<5.0.0",
    "pytest>=9.0.3,<10.0.0",
    "types-requests>=2.33.0.20260518,<3.0.0.0",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.18,<0.12.0"]
build-backend = "uv_build"

[tool.black]
target-version = ["py312", "py313", "py314"]

[tool.pylint.format]
max-line-length = "88"

[tool.isort]
profile = "black"
